@@ -1,0 +1,55 @@
+/* Copyright (c) 2002  Theodore A. Roth
+   All rights reserved.
+
+   Redistribution and use in source and binary forms, with or without
+   modification, are permitted provided that the following conditions are met:
+
+   * Redistributions of source code must retain the above copyright
+     notice, this list of conditions and the following disclaimer.
+   * Redistributions in binary form must reproduce the above copyright
+     notice, this list of conditions and the following disclaimer in
+     the documentation and/or other materials provided with the
+     distribution.
+
+   THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+   AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+   IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+   ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+   LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+   CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+   SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+   INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+   CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+   ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+   POSSIBILITY OF SUCH DAMAGE. */
+
+/** \page acks Acknowledgments
+
+    This document tries to tie together the labors of a large group of
+    people. Without these individuals' efforts, we wouldn't have a terrific,
+    <i><b>free</b></i> set of tools to develop AVR projects. We all owe thanks to:
+
+	- The GCC Team, which produced a very capable set of development tools for
+	an amazing number of platforms and processors.
+
+	- Denis Chertykov [ denisc@overta.ru ] for making the AVR-specific changes
+	to the GNU tools.
+
+	- Denis Chertykov and Marek Michalkiewicz [ marekm@linux.org.pl ] for
+	developing the standard libraries and startup code for \b AVR-GCC.
+
+	- Uros Platise for developing the AVR programmer tool, \b uisp.
+
+	- Joerg Wunsch [ joerg@FreeBSD.ORG ] for adding all the AVR development
+	tools to the FreeBSD [ http://www.freebsd.org ] ports tree and for providing
+	the demo project in [FIXME: hasn't been merged yet, put ref here].
+
+	- Brian Dean [ bsd@bsdhome.com ] for developing \b avrprog (an alternate
+	to <b>uisp</b>) and for contributing [FIXME: need to merge section on
+	<b>avrprog</b>] which describes how to use it.
+
+	- And lastly, all the users who use the software. If nobody used the
+	software, we probably would be very motivated to continue to develop
+	it. Keep those bug reports coming. ;-)
+
+*/
