@@ -1,3 +1,11 @@
+2002-08-09  Theodore A. Roth  <troth@verinet.com>
+
+	* doc/api/Makefile.am(EXTRA_DIST): Add new dox files.
+	* doc/api/interrupts.dox: New file.
+	* doc/api/acknowledge.dox: New file.
+	* include/avr/interrupt.h: Added doxy comments.
+	* include/avr/signal.h: Updated doxy comments.
+
 2002-08-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/Makefile.am: restructure to make the docs targets depend on
